--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -4,6 +4,8 @@ border-bottom: 1px solid rgba(33,33,33,.4);
 }
 
 .cards__list{
+  margin: 0;
+  padding: 0;
   list-style-type: none;
   display: grid;
   justify-content: center;
