--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,7 +6,7 @@
 
 
 .footer__copyright{
-  font-family: Poppins;
+  font-family: Poppins, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
