--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -32,6 +32,7 @@
 }
 
 .profile__description{
+  margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -51,16 +52,23 @@
   height: 16px;
   background: none;
   border: none;
-  font-family: Poppins;
+  font-family: Poppins, Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
   text-align: left;
   opacity: 70%;
   border-radius: 90px;
+  cursor: pointer;
+  color: rgba(33, 33, 33, 1);
+}
+
+.profile__edit-btn:hover {
+  color: #000;
 }
 
 .profile__add-btn {
+  cursor: pointer;
   margin-left: auto;
   background-color: #212121;
   width: 149px;
@@ -70,7 +78,7 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  font-family: Poppins;
+  font-family: Poppins, Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
@@ -79,10 +87,10 @@
   margin-top: auto
 }
 
-.add-btn__text{
-  margin-top: 18px;
-  margin-bottom: 18px;
+.profile__add-btn:hover{
+  background: rgba(33, 33, 33, 0.8);
 }
+
 
 @media screen and (max-width: 627px) {
   .profile{
@@ -96,7 +104,7 @@
   .profile__avatar{
     margin-right: 0;
     height: 80px;
-    width: 80px;
+    max-width: 80px;
     margin-bottom: 12px;
   }
 
@@ -112,7 +120,7 @@
 
   .profile__description{
     margin: 0 0 32px;
-    width: 288px;
+    max-width: 288px;
   }
 
   .profile__edit-btn{
