--- a/blocks/card.css
+++ b/blocks/card.css
@@ -28,10 +28,11 @@ width: 100%;
 }
 
 .card__like-btn:hover{
-  border: 2px solid rgba(33, 33, 33, 1)
+  opacity: 1;
 }
 
 .card__title{
+  max-width: 350px;
   font-family: Poppins, Arial ,sans-serif;
   font-size: 20px;
   font-weight: 500;
