--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     visibility: visible;
+    padding: 0 20px;
 }
 
 .modal__opened {
@@ -23,6 +24,7 @@
     box-sizing: border-box;
     padding: 32px 50px;
     position: relative;
+    border-radius: 8px;
 }
 
 .modal__close-btn{
@@ -32,11 +34,23 @@
     right: 50px;
     width: 40px;
     height: 40px;
+    border: none;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
 }
 
 .modal__title{
     margin-top: 0;
+    padding: 4px 0;
     margin-bottom: 32px;
+    font-family: Poppins;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 32px;
+    color: rgba(33, 33, 33, 1);
 }
 
 .modal__label{
@@ -44,6 +58,11 @@
     flex-direction: column;
     gap: 8px;
     margin-bottom: 32px;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 17.6px;
+    color: rgba(33, 33, 33, .7);
 }
 
 .modal__submit-btn{
@@ -51,8 +70,68 @@
     padding: 18px 0;
     background: #212121;
     border-radius: 8px;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    color: rgba(252, 245, 229, 1);
+    border: none;
+}
+
+.modal__submit-btn:hover{
+  background-color: rgba(33, 33, 33, .8);
 }
 
 .modal__input{
     padding: 16px 12px;
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    border-radius: 8px;
+    border: 1px solid rgba(33, 33, 33, 0.4);
+}
+
+.modal__input::placeholder{
+  color: rgba(33, 33, 33, .3);
+}
+
+.modal__input:hover{
+  border: 1px solid rgba(33, 33, 33, 1);
+}
+
+.close-btn__img {
+  opacity: .4;
+
+}
+
+.close-btn__img:hover{
+  opacity: 1;
+}
+
+@media screen and (max-width: 627px) {
+  .modal{
+    padding: 0 10px;
+  }
+  .modal__container{
+    padding: 12px;
+  }
+  .modal__title{
+    font-family: Poppins;
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 24px;
+    padding: 10px 0;
+  }
+  .modal__close-btn{
+    top: 12px;
+    right: 12px;
+  }
+  .modal__label{
+    margin-bottom: 24px;
+  }
+  .modal__submit-btn{
+    width: 100%;
+  }
 }
