--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,11 +9,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    visibility: visible;
+    visibility: hidden;
     padding: 0 20px;
+    visibility: hidden;
 }
 
-.modal__opened {
+.modal_opened {
     visibility: visible;
 }
 
