--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -102,12 +102,12 @@
   border: 1px solid rgba(33, 33, 33, 1);
 }
 
-.modal__close-btn__img {
+.modal__close-img {
   opacity: .4;
 
 }
 
-.modal__close-btn__img:hover{
+.modal__close-img:hover{
   opacity: 1;
 }
 
