--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card{
 width: 100%;
+position: relative;
 }
 
 .card__image{
@@ -9,6 +10,7 @@ width: 100%;
   border-radius: 5%;
   padding: 0;
   margin: 0;
+
 }
 
 .card__content{
@@ -56,6 +58,22 @@ width: 100%;
   white-space: nowrap;
   overflow: hidden;
   margin: 4px 0 0 0 ;
+}
+
+.card__delete-btn{
+  background-image: url("../images/delete-btn.svg");
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 32px;
+  width: 32px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.card__delete-btn:hover{
+  background-image: url("../images/delete-btn-hover.svg");
 }
 
 @media screen and (max-width: 627px) {
