--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,13 +9,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    visibility: hidden;
     padding: 0 20px;
     visibility: hidden;
+    transition: visibility 0s linear 1s, opacity 1s;
+    opacity: 0;
 }
 
 .modal_opened {
     visibility: visible;
+    opacity: 1;
+    transition: visibility 0s linear 0s, opacity 1s;
 }
 
 .modal__container{
@@ -28,9 +31,22 @@
     border-radius: 8px;
 }
 
-.modal__close-btn{
+.modal__container_type_preview{
+  padding: 0;
+  background-color: transparent;
+  width: auto;
+}
+
+.modal__image{
+  width: 100%;
+  max-height: 80vh;
+  max-width: 80vw;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
+.modal__close{
     position: absolute;
-    right: 0;
     top: 32px;
     right: 50px;
     width: 40px;
@@ -41,13 +57,26 @@
     align-items: center;
     justify-content: center;
     padding: 0;
+    margin: 0;
+}
+
+.modal__close_type_preview {
+  background: url("../images/preview-modal-close-icon.svg");
+  background-color: transparent;
+  top: 0px;
+  right: -55.5px;
+  opacity: 1;
+}
+
+.modal__close_type_preview:hover{
+  opacity: .4;
 }
 
 .modal__title{
     margin-top: 0;
     padding: 4px 0;
     margin-bottom: 32px;
-    font-family: Poppins;
+    font-family: Poppins, Arial, sans-serif;
     font-size: 32px;
     font-weight: 500;
     line-height: 32px;
@@ -59,11 +88,29 @@
     flex-direction: column;
     gap: 8px;
     margin-bottom: 32px;
-    font-family: Poppins;
+    font-family: Poppins, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 17.6px;
     color: rgba(33, 33, 33, .7);
+}
+
+.modal__caption{
+  background: rgba(33, 33, 33, 1);
+  width: fit-content;
+  margin: 0;
+  padding: 4px 8px;
+  color: rgba(255, 255, 255, 1);
+  font-family: Poppins, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  border-radius: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 77vw;
 }
 
 .modal__submit-btn{
@@ -71,7 +118,7 @@
     padding: 18px 0;
     background: #212121;
     border-radius: 8px;
-    font-family: Poppins;
+    font-family: Poppins, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
@@ -85,7 +132,7 @@
 
 .modal__input{
     padding: 16px 12px;
-    font-family: Poppins;
+    font-family: Poppins, Arial, sans-serif;
     font-size: 20px;
     font-weight: 500;
     line-height: 20px;
@@ -111,6 +158,7 @@
   opacity: 1;
 }
 
+
 @media screen and (max-width: 627px) {
   .modal{
     padding: 0 10px;
@@ -118,17 +166,39 @@
   .modal__container{
     padding: 12px;
   }
+
+  .modal__container_type_preview{
+    padding: 0;
+  }
+
   .modal__title{
-    font-family: Poppins;
+    font-family: Poppins, Arial, sans-serif;
     font-size: 20px;
     line-height: 20px;
     margin-bottom: 24px;
     padding: 10px 0;
   }
-  .modal__close-btn{
+  .modal__close{
     top: 12px;
     right: 12px;
   }
+
+  .modal__close_type_preview {
+    background: url("../images/preview-modal-close-icon.svg");
+    background-color: transparent;
+    top: -48px;
+    right: 0px;
+    opacity: 1;
+  }
+
+  .modal__caption{
+    font-family: Poppins, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19.2px;
+    text-align: left;
+  }
+
   .modal__label{
     margin-bottom: 24px;
   }
