--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -205,4 +205,16 @@
   .modal__submit-btn{
     width: 100%;
   }
+
+  .modal__image{
+    width: auto;
+    border-radius: 8px;
+    max-width: 100%;
+    max-height: 80vh;
+    object-fit: contain; 
+  }
+  
+  div#preview-modal.modal{
+    padding: 0 16px;
+  }
 }
