--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -130,6 +130,10 @@
   background-color: rgba(33, 33, 33, .8);
 }
 
+.modal__submit-btn_inactive{
+  opacity: .5;
+}
+
 .modal__input{
     padding: 16px 12px;
     font-family: Poppins, Arial, sans-serif;
@@ -147,6 +151,26 @@
 
 .modal__input:hover{
   border: 1px solid rgba(33, 33, 33, 1);
+}
+
+.modal__error{
+  display: none;
+  font-family: Poppins, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: red;
+}
+
+.modal__error_active{
+  display: block;
+}
+
+.modal__input_type_error{
+  border: 1px solid #FF000099;
+}
+
+.modal__input_type_error:hover{
+  border: 1px solid #FF000099;
 }
 
 .modal__close-img {
@@ -211,9 +235,9 @@
     border-radius: 8px;
     max-width: 100%;
     max-height: 80vh;
-    object-fit: contain; 
+    object-fit: contain;
   }
-  
+
   div#preview-modal.modal{
     padding: 0 16px;
   }
